<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_titulo_pantalla1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:text="@string/titulo1"
        android:textColor="#44770A"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_elige_dia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/titulo2"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_titulo_pantalla1" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/textospinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_elige_dia" />

    <EditText
        android:id="@+id/edt_cantidad_entradas"
        android:layout_width="312dp"
        android:layout_height="66dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="0"
        android:ems="10"
        android:hint="@string/cantidadEntradas"
        android:inputType="number"
        android:textColor="@color/micolornaranja"
        android:textColorHint="@color/micolornaranja"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.238"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <TextView
        android:id="@+id/txt_entradas_disponibles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/titulo3"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/edt_cantidad_entradas"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edt_cantidad_entradas"
        app:layout_constraintTop_toBottomOf="@+id/edt_cantidad_entradas" />

    <TextView
        android:id="@+id/txt_numero_disponible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/cinco"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/txt_entradas_disponibles"
        app:layout_constraintStart_toEndOf="@+id/txt_entradas_disponibles"
        app:layout_constraintTop_toTopOf="@+id/txt_entradas_disponibles" />

    <Button
        android:id="@+id/bt_cantidad_entradas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/purple_700"
        android:text="@string/textoboton1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_cantidad_entradas" />

    <TextView
        android:id="@+id/txt_precio_entradas"
        android:layout_width="163dp"
        android:layout_height="38dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="48dp"
        android:text="@string/titulo4"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_cantidad_entradas" />

    <TextView
        android:id="@+id/txt_precio_entradas_numero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/cero"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/txt_precio_entradas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toEndOf="@+id/txt_precio_entradas"
        app:layout_constraintTop_toTopOf="@+id/txt_precio_entradas"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txt_descuento_aplicado"
        android:layout_width="160dp"
        android:layout_height="34dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="27dp"
        android:text="@string/titulo5"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/txt_descuento_aplicado_numero"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_precio_entradas" />

    <TextView
        android:id="@+id/txt_descuento_aplicado_numero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="108dp"
        android:text="@string/cero"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/txt_descuento_aplicado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txt_descuento_aplicado"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txt_total"
        android:layout_width="160dp"
        android:layout_height="34dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="19dp"
        android:text="@string/titulo6"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_descuento_aplicado" />

    <TextView
        android:id="@+id/txt_total_numero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:text="@string/cero"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/txt_total"
        app:layout_constraintStart_toEndOf="@+id/txt_total"
        app:layout_constraintTop_toTopOf="@+id/txt_total" />

    <Button
        android:id="@+id/bt_ir_pago"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="36dp"
        android:text="@string/titulo7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>